# spacex_data_pipeline

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  config.json  config_snowflake.json  pyproject.toml  requirements.txt
.github/workflows/: run_singer_dev.yml  run_sync_dev.yml
db_setup/V1_0/: V1_0__01_dev_database_management.sql  V1_0__02_uat_database_management.sql  V1_0__03_prd_database_management copy 2.sql  V1_0__03_prd_database_management.sql  V1_0__04_custom_users_creation.sql  V1_0__05_dev_stg_schema_management.sql  V1_0__05_schema_management.sql  V1_0__06_dev_cmp_schema_management.sql  V1_0__07_dev_pbl_schema_management.sql  V1_0__08_dev_tec_schema_management.sql
db_setup/V2_0/: V2_0__01_create_published_tables_structures.sql  V2_0__01_create_staging_tables_structure.sql  V2_0__02_create_published_tables_structures.sql
documents/: profiles.yml  spacex_business_logic.md  spacex_data_alert_system.md  spacex_data_architecture.md  spacex_data_column_lineage_data_quality.md  spacex_data_model.md  spacex_entities_details.md  spacex_technical_specification.md
singer_tap/: config_snowflake.json  setup.py  tap_spacex_runner.py
singer_tap/include/: fetch_capsules.py  fetch_company.py  fetch_cores.py  fetch_crew.py  fetch_dragons.py  fetch_history.py  fetch_landpads.py  fetch_launches.py  fetch_launchpads.py  fetch_payloads.py  fetch_roadster.py  fetch_rockets.py  fetch_ships.py  fetch_starlink.py  spacex_tap_base.py  tap_spacex.py  training.py
spacex_project/: README.md  dbt_project.yml  packages.yml
tap-spacex/: tap-spacex_runner.py
(+62 files in other folders)
